libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/input-1.jsonc
//@ run: fail
//@ description: input/1 should error out
["::kernel::special_form::input", "x"]
//~^ ERROR expected 2 or 3 arguments to `input`, found 1
